istio-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tekton-triggers
  namespace: getting-started
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "tekton.domain4free12233.tk"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tekton-triggers
  namespace: getting-started
spec:
  hosts:
  - "tekton.domain4free12233.tk"
  gateways:
  - tekton-triggers
  http:
  - route:
    - destination:
        host: el-getting-started-listener
        port:
          number: 8080
---
